<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ededed" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/part"
            android:orientation="vertical" >

            <LinearLayout style="@style/tablerow_sty" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_pgdh"
                    android:textColor="#4d4f4e" />

                <TextView
                    android:id="@+id/tv_pgdh"
                    style="@style/edittext_sty" />
            </LinearLayout>

            <View style="@style/view_sty" />

            <LinearLayout style="@style/tablerow_sty" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="服务咨询师："
                    android:textColor="#4d4f4e" />

                <TextView
                    android:id="@+id/tv_fwgcs"
                    style="@style/edittext_sty"
                    android:layout_width="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/iv_telphone"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/telphone" />
            </LinearLayout>

            <View style="@style/view_sty" />

            <LinearLayout style="@style/tablerow_sty" >

                <TextView
                    android:id="@+id/textV5fj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_smsf"
                    android:textColor="#4d4f4e" />

                <TextView
                    android:id="@+id/tv_smsf"
                    style="@style/edittext_sty" />
            </LinearLayout>

            <View style="@style/view_sty" />

            <LinearLayout style="@style/tablerow_sty" >

                <TextView
                    android:id="@+id/textVc5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_kfyq"
                    android:textColor="#4d4f4e" />

                <TextView
                    android:id="@+id/tv_kfyq"
                    style="@style/edittext_sty" />
            </LinearLayout>

            <View style="@style/view_sty" />

            <LinearLayout style="@style/tablerow_sty" >

                <TextView
                    android:id="@+id/textV55"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_bzr"
                    android:textColor="#4d4f4e" />

                <TextView
                    android:id="@+id/tv_bzr"
                    style="@style/edittext_sty" />
            </LinearLayout>

            <View style="@style/view_sty" />

            <LinearLayout style="@style/tablerow_sty" >

                <TextView
                    android:id="@+id/textV56"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_kfxm"
                    android:textColor="#4d4f4e" />

                <TextView
                    android:id="@+id/tv_kfxm"
                    style="@style/edittext_sty" />
            </LinearLayout>

            <View style="@style/view_sty" />

            <LinearLayout style="@style/tablerow_sty" >

                <TextView
                    android:id="@+id/textV6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_kfdh"
                    android:textColor="#4d4f4e" />

                <TextView
                    android:id="@+id/tv_phone_kh"
                    style="@style/edittext_sty"
                    android:layout_width="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/iv_telphone_kh"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/telphone" />
            </LinearLayout>

            <View style="@style/view_sty" />

            <LinearLayout style="@style/tablerow_sty" >

                <TextView
                    android:id="@+id/TextVxq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_supq"
                    android:textColor="#4d4f4e" />

                <TextView
                    android:id="@+id/tv_suxq"
                    style="@style/edittext_sty"
                    android:singleLine="true" />
            </LinearLayout>

            <View style="@style/view_sty" />

            <LinearLayout style="@style/tablerow_sty" >

                <TextView
                    android:id="@+id/TextVsupq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_suqy"
                    android:textColor="#4d4f4e" />

                <TextView
                    android:id="@+id/tv_supq"
                    style="@style/edittext_sty"
                    android:singleLine="true" />
            </LinearLayout>

            <View style="@style/view_sty" />

            <LinearLayout style="@style/tablerow_sty" >

                <TextView
                    android:id="@+id/TextVxxdz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_xxdz"
                    android:textColor="#4d4f4e" />

                <TextView
                    android:id="@+id/tv_xxdz"
                    style="@style/edittext_sty"
                    android:singleLine="true" />
            </LinearLayout>

            <View style="@style/view_sty" />

            <LinearLayout style="@style/tablerow_sty" >

                <TextView
                    android:id="@+id/TextVjsdw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_jsdw"
                    android:textColor="#4d4f4e" />

                <TextView
                    android:id="@+id/tv_jsdw"
                    style="@style/edittext_sty"
                    android:singleLine="true" />
            </LinearLayout>

            <View style="@style/view_sty" />

            <LinearLayout style="@style/tablerow_sty" >

                <TextView
                    android:id="@+id/gzlb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_gzdl"
                    android:textColor="#4d4f4e" />

                <Spinner
                    android:id="@+id/sp_gzlb"
                    style="@style/edittext_sty"
                    android:layout_width="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/eodd"
                    style="@style/text_image"
                    android:contentDescription="@string/todo" />
            </LinearLayout>

            <View style="@style/view_sty" />

            <LinearLayout style="@style/tablerow_sty" >

                <TextView
                    android:id="@+id/gzzl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_gzzl"
                    android:textColor="#4d4f4e" />

                <Spinner
                    android:id="@+id/sp_gzzl"
                    style="@style/edittext_sty"
                    android:layout_width="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/eodzl"
                    style="@style/text_image"
                    android:contentDescription="@string/todo" />
            </LinearLayout>

            <View style="@style/view_sty" />

            <LinearLayout style="@style/tablerow_sty" >

                <TextView
                    android:id="@+id/gzxl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_gzxl"
                    android:textColor="#4d4f4e" />

                <Spinner
                    android:id="@+id/sp_gzlbb"
                    style="@style/edittext_sty"
                    android:layout_width="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/eodgzlb"
                    style="@style/text_image"
                    android:contentDescription="@string/todo" />
            </LinearLayout>

            <View style="@style/view_sty" />

            <LinearLayout style="@style/tablerow_sty" >

                <TextView
                    android:id="@+id/textV66"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_gzxx"
                    android:textColor="#4d4f4e" />

                <TextView
                    android:id="@+id/tv_gzxx"
                    style="@style/edittext_sty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View style="@style/view_sty" />

            <LinearLayout style="@style/tablerow_sty" >

                <TextView
                    android:id="@+id/textV64"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_bz"
                    android:textColor="#4d4f4e" />

                <TextView
                    android:id="@+id/tv_bz"
                    style="@style/edittext_sty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                style="@style/view_sty"
                android:visibility="gone" />

            <LinearLayout
                style="@style/tablerow_sty"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/textV64w"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_gdfy"
                    android:textColor="#4d4f4e" />

                <TextView
                    android:id="@+id/tv_gdfy"
                    style="@style/edittext_sty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View style="@style/view_sty" />

            <LinearLayout style="@style/tablerow_sty" >

                <TextView
                    android:id="@+id/textV6f4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_clfs"
                    android:textColor="#4d4f4e" />

                <TextView
                    android:id="@+id/tv_clfs"
                    style="@style/edittext_sty"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="#ff0190eb" />

                <ImageView
                    style="@style/text_image"
                    android:contentDescription="@string/todo" />
            </LinearLayout>

            <View style="@style/view_sty" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="10dp" />

        <include
            android:id="@+id/include_botto"
            layout="@layout/bottom_button" />
    </LinearLayout>

</ScrollView>